# stm32-discovery

./: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
doc/: README.md
examples/: blinky.rs  button.rs  button_irq.rs  button_irq_rtfm.rs  button_irq_rtic.rs  display.rs  hello.rs  spi.rs  test_on_host.rs  timer.rs  timer_irq_rtfm.rs  wakeup.rs
src/: board.rs  display.rs  lib.rs  main.rs  view.rs
