[package]
authors = ["Volker Kempert <volker.kempert@almedso.de>"]
edition = "2018"
readme = "README.md"
name = "stm32l053c8t6-discovery"
version = "0.1.0"


[dependencies]
embedded-hal = { version = "^0.2.3", features = ["unproven"]}
nb = "0.1.2"
cortex-m = "^0.6.2"
panic-halt = "^0.2.0"
cortex-m-rtic = "^0.5.3"
stm32l0 =  { version = "0.11.0", features = ["stm32l0x3", "rt"] }
stm32l0xx-hal = { version = "0.6.2", features = ["stm32l0x3", "io-STM32L051", "rt"] }
embedded-graphics = { version = "0.6.1", optional = true}
epd-gde021a1 = { version = "^0.1.2" }
debounced-pin = "0.3.0"
cortex-m-semihosting = "^0.3.3"
panic-semihosting = "^0.5.0"


[dev-dependencies]
cortex-m-rt = "^0.6.10"


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[features]
default = ["graphics"]

graphics = ["embedded-graphics"]